--- a/src/Components/EnergyCalculator/Header/Header.css
+++ b/src/Components/EnergyCalculator/Header/Header.css
@@ -6,7 +6,7 @@
 .cesn-official-banner-inner {
   display: flex;
   align-items: center;
-  gap: 0.75rem;
+  gap: 1.25rem;
   max-width: var(--main-max-width);
   margin: auto;
   padding: 0.5rem 1rem;
@@ -34,6 +34,6 @@
   }
 
   .cesn-official-banner-inner {
-    gap: 0.5rem;
+    gap: 0.75rem;
   }
 }
